5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1723_2506.log
== TEST (2019-05-11 12:16:58) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:19:02) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:19:20) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:20:22) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt <= 0):
	print("EXTINCAO")
	print(ano)
else(qt >= 12.000):
	print("LIMITE")
	print(ano)
	
-- ERROR:
File "XXXX", line 14
    else(qt >= 12.000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:20:49) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt <= 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:24:51) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt <= 0):
	print("EXTINCAO")	
else:
	print("LIMITE")
print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:28:03) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt <= 0):
	print("EXTINCAO")	
else:
	print("LIMITE")


-- OUTPUT:
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:29:52) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
print(ano)
if(qt <= 0):
	print("EXTINCAO")	
else:
	print("LIMITE")


-- OUTPUT:
0
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:31:43) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
print(ano)
if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000)
	print("LIMITE")


-- ERROR:
File "XXXX", line 14
    elif(qt >= 12.000)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:31:48) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
print(ano)
if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")


-- OUTPUT:
0
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:31:50) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
print(ano)
if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")


-- OUTPUT:
0
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:33:56) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1

if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")
print(ct)
print(qt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:13) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:14) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:16) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:16) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:16) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:34:16) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
if(qt < 0):
	print("EXTINCAO")
	print(ano)
else:
	print("LIMITE")
	print(ano)
	
-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:39:20) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1

if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")
print(ct)
print(qt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:39:22) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1

if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")
print(ct)
print(qt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:39:27) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1

if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")
print(ct)
print(qt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:40:15) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
	print(ct)
	print(qt)
	print(ano)

if(qt <= 0):
	print("EXTINCAO")	
elif(qt >= 12.000):
	print("LIMITE")


-- OUTPUT:
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:40:40) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
	print(ct)
	print(qt)
	print(ano)


-- OUTPUT:
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:41:04) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))


while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
print(ct)
print(qt)
print(ano)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:41:41) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = (qt + ct) - qv
	ano = ano + 1
print(ct)
print(qt)
print(ano)


-- OUTPUT:
74.04
1234
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:47:47) 
-- CODE:
ano = 0
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))

ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt + ct - qv
	ano = ano + 1
print(ct)
print(qt)
print(ano)
if(qt <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(ano)

-- OUTPUT:
74.04
1234
0
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:49:12) 
-- CODE:

qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt + ct - qv
	ano = ano + 1

if(qt <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(ano)

-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:51:46) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt - qv +ct
	ano = ano + 1

if(qt <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(ano)

-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:54:30) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt - qv +ct
	ano = ano + 1
	print(ano)
	print(ct)
	print(qv)
	print(qt)
if(qt <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(ano)

-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:55:38) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt - qv +ct
	ano = ano + 1
	print(ano)
	print(ct)
	print(qv)
	print(qt)

-- OUTPUT:
LIMITE
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:55:46) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt - qv +ct
	ano = ano + 1
print(ano)
print(ct)
print(qv)
print(qt)

-- OUTPUT:
0
74.04
135
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:57:01) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12.000):
	ct = (qt * pt)/100
	qt = qt + ct
	ano = ano + 1
print(ano)

-- OUTPUT:
0
74.04
135
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:57:31) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12000):
	ct = (qt * pt)/100
	qt = qt + ct
	ano = ano + 1
print(ano)

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:58:12) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12000):
	ct = (qt * pt)/100
	qt = qt + ct - qv
	ano = ano + 1
if(qt <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(ano)


-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:58:56) 
-- CODE:
qt = int(input("insira a quantidade inicial de tambaquis: "))
pt = float(input("insira o percentual de crscimento de tambaquis:"))
qv = int(input("insira a quantidade de tambaquis postos a venda:"))
ano = 0
ct = (qt * pt)/100
while(qt > 0 and qt < 12000):
	ct = (qt * pt)/100
	qt = qt + ct - qv
	ano = ano + 1
if(qt <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(ano)


-- EXECUTION TIME:
3.64549
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
